--- a/zoom_clone/package.json
+++ b/zoom_clone/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.21.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.513.0",
-    "next": "14.2.24",
+    "next": "^14.2.25",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^3.3.0",
